--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bluenoc-dkms (16.02.3-2precise2) precise; urgency=medium
+
+  * Revise source layout so package will build
+
+ -- Jamey Hicks <jamey.hicks@gmail.com>  Fri, 05 Feb 2016 12:41:21 -0500
+
 bluenoc-dkms (2015.09-1precise1) precise; urgency=medium
 
   * Packaged bluenoc driver for dkms installation
